fix: block icons link contrast color

--- a/src/theme/ItaliaTheme/Blocks/_iconBlocks.scss
+++ b/src/theme/ItaliaTheme/Blocks/_iconBlocks.scss
@@ -81,7 +81,11 @@
       h5,
       h6,
       a {
-        color: #fff;
+        &,
+        span {
+          color: #fff;
+          text-decoration-color: #fff;
+        }
       }
     }
   }
